# BiGGManPlusPlus

./: .gitignore  CMakeLists.txt  Presentation1.pptx  TestingfirstCLaplacecplace.m  TestinglinearSystem  main.cpp  notes.txt
Analysis/: Analysis.cpp  Analysis.h  AnalysisDegreesOfFreedom.cpp  AnalysisDegreesOfFreedom.h  DOFInitializer.cpp  DOFInitializer.h  DiscretizePDEProperties.cpp  DiscretizePDEProperties.h  NumericalAnalysis.cpp  NumericalAnalysis.h
Analysis/AnalysisDOFs/: AnalysisDegreesOfFreedom.cpp  AnalysisDegreesOfFreedom.h  DOFInitializer.cpp  DOFInitializer.h
Analysis/FiniteDifferenceAnalysis/: EquilibriumLinearSystemBuilder.cpp  EquilibriumLinearSystemBuilder.h  FiniteDifferenceAnalysis.cpp  FiniteDifferenceAnalysis.h  StStFDTest.cpp  StStFDTest.h  SteadyStateFiniteDifferenceAnalysis.cpp  SteadyStateFiniteDifferenceAnalysis.h  TransientFiniteDifferenceAnalysis.cpp  TransientFiniteDifferenceAnalysis.h
BoundaryConditions/: BoundaryCondition.cpp  BoundaryCondition.h  BoundaryConditionSet.cpp  BoundaryConditionSet.h  DomainBoundaryConditions.cpp  DomainBoundaryConditions.h
DegreesOfFreedom/: DegreeOfFreedom.cpp  DegreeOfFreedom.h  DegreeOfFreedomID.cpp  DegreeOfFreedomID.h  DegreeOfFreedomTypes.h  DegreesOfFreedomCategorization.cpp  DegreesOfFreedomCategorization.h  IsoParametricDOFFinder.cpp  IsoParametricDOFFinder.h
Discretization/: DiscreteEntityId.cpp  DiscreteEntityId.h  Node.cpp  Node.h
Discretization/Elements/: Element.cpp  Element.h  MeshElements.cpp  MeshElements.h
Discretization/Id/: DiscreteEntityId.cpp  DiscreteEntityId.h
Discretization/Mesh/: GhostMesh.cpp  GhostMesh.h  Mesh.cpp  Mesh.h  Mesh1D.cpp  Mesh1D.h  Mesh2D.cpp  Mesh2D.h  Mesh3D.cpp  Mesh3D.h
Discretization/Node/: IsoParametricNeighbourFinder.cpp  IsoParametricNeighbourFinder.h  IsoparametricNodeGraph.cpp  IsoparametricNodeGraph.h  IsoparametricNodeHoodGraph.cpp  IsoparametricNodeHoodGraph.h  NodalCoordinates.cpp  NodalCoordinates.h  Node.cpp  Node.h  NodeNeighbourFinder.cpp  NodeNeighbourFinder.h
Discretization/Time/: TimeEntity.cpp  TimeEntity.h
FiniteDifferenceAnalysis/: FiniteDifferenceAnalysis.cpp  FiniteDifferenceAnalysis.h
LinearAlgebra/: AnalysisLinearSystem.cpp  AnalysisLinearSystem.h  AnalysisLinearSystemInitializer.cpp  AnalysisLinearSystemInitializer.h  AnalysisLinearSystemInitializer2.cpp  AnalysisLinearSystemInitializer2.h  Array.h  EquilibriumLinearSystemInitializer.cpp  EquilibriumLinearSystemInitializer.h  LinearSystem.cpp  LinearSystem.h  MatrixTest.cpp  MatrixTest.h  NumericalVector.h  ParallelizationMethods.h  TransformationTensors.cpp  TransformationTensors.h  Transformations.cpp  Transformations.h  VectorOperations.cpp  VectorOperations.h
LinearAlgebra/Array/: Array.cpp  Array.h  Array2.h  LUDecomposition.cpp  LUDecomposition.h  NumericalArray.cpp  NumericalArray.h  NumericalMatrix.cpp  NumericalMatrix.h
LinearAlgebra/ContiguousMemoryNumericalArrays/: NumericalArray.h  NumericalVectorCUDA.cuh
LinearAlgebra/EigenDecomposition/: IEigenvalueDecomposition.cpp  IEigenvalueDecomposition.h  LanczosEigenDecomposition.cpp  LanczosEigenDecomposition.h  PowerMethod.cpp  PowerMethod.h
LinearAlgebra/FiniteDifferences/: FDScheme.cpp  FDScheme.h  FDSchemeComponent.cpp  FDSchemeComponent.h  FDSchemeSpecs.cpp  FDSchemeType.h  (+26 more)
LinearAlgebraCUDA/: MemoryManagementCUDA.cu  MemoryManagementCUDA.cuh  NumericalOperationsCUDA.cu  NumericalOperationsCUDA.cuh
Logging/: ChronoDurationConverters.cpp  ChronoDurationConverters.h  Logs.cpp  Logs.h  Timer.cpp  Timer.h
MathematicalProblem/: MathematicalProblem.cpp  MathematicalProblem.h  SteadyStateMathematicalProblem.cpp  SteadyStateMathematicalProblem.h  TransientMathematicalProblem.cpp  TransientMathematicalProblem.h
PartialDifferentialEquations/: DifferentialEquation.cpp  DifferentialEquation.h  FieldProperties.h  PartialDifferentialEquation.cpp  PartialDifferentialEquation.h  SecondOrderLinearPDEProperties.cpp  SecondOrderLinearPDEProperties.h  SpaceFieldProperties.h
PositioningInSpace/: Coordinate.cpp  Coordinate.h  CoordinateSet.cpp  CoordinateSet.h  CoordinateSystem.cpp  CoordinateSystem.h  CoordinateVector.cpp  CoordinateVector.h  DirectionsPositions.cpp  DirectionsPositions.h  IsoParametricCurves.cpp  IsoParametricCurves.h  PhysicalSpaceCharacteristics.cpp  PhysicalSpaceCharacteristics.h  SpaceCharacteristics.h
Primitives/: Array.cpp  Array.h  Matrix.cpp  Matrix.h  MatrixTest.cpp  MatrixTest.h
StructuredMeshGeneration/: DomainBoundaryFactory.cpp  DomainBoundaryFactory.h  MeshFactory.cpp  MeshFactory.h  MeshPreProcessor.cpp  MeshPreProcessor.h  MeshPreProcessor2D.cpp  MeshPreProcessor2D.h  MeshSpecs.cpp  MeshSpecs.h  MeshSpecs2D.cpp  MeshSpecs2D.h  MeshTest2D.cpp  MeshTest2D.h  NodeFactory.cpp  NodeFactory.h
TEST/: Array.cpp  Array.h  CMakeLists.txt  main.cpp
Testing/: 20_10_30_gewrgiou_180.vtk  20_20_10_parallelepiped.vtk  21_21_21_cube.vtk  Book1.xlsx  firstMesh.vtk  firstMesh.vtkfile:⁄⁄⁄home⁄hal9000⁄code⁄BiGGMan++⁄Testing⁄firstMesh.vtk  ghostMesh.vtk  linearSystem.m  linearSystemEigen.m  linearSystemEigen2.m  linearSystemTemperature.m  mesh.vtk  meshEllipse.vtk  meshRebuilt.vtk  mesh_sin_2_2_1_4_200_100.vtk  nodesParaviewState.pvsm  octave-workspace  t_matrix.m  temperatureField.vtk  temperatureFieldZapdosArtifact.vtk  testingBC.m  threeDeeMeshBoi.vtk  yololo.vtk
Tests/: IterativeSolversTest.h  LanczosEigenDecompositionTest.cpp  LanczosEigenDecompositionTest.h  Mesh3dTest.cpp  Mesh3dTest.h  MeshGenerator.h  NodeCacheLoyaltyOptimization.h  NumericalMatrixTest.cpp  NumericalMatrixTest.h  NumericalVectorTest.h  OperationsCUDA.cpp  OperationsCUDA.h  QRTest.cpp  QRTest.h  SteadyState2DTest.h  SteadyState3DNeumann.cpp  SteadyState3DNeumann.h  SteadyStateDirichlet3D.cpp  SteadyStateDirichlet3D.h  VectorOperationsTest.cpp  VectorOperationsTest.h
ThreadingOperations/: ThreadingOperations.h
Utility/: Calculators.cpp  Calculators.h  EnumerablesTranformations.h
UtilityCUDA/: MemoryManagementCUDA.cuh  NumericalOperationsCUDA.cu  NumericalOperationsCUDA.cuh
biggDocumentation/: pdes.aux  pdes.out  pdes.tex  sdf
(+414 files in other folders)
